[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ParadoxParser"]
include-package-data = true

[tool.setuptools.package-data]
"ParadoxParser" = ["templates/**/*"]

[project]
name = "ParadoxParser"
version = "0.0.1"
dependencies = ["Jinja2==3.1.6", "MarkupSafe==3.0.3"]
requires-python = ">=3.11"
authors = [
  {name = "", email = "lol.no.spying@ai.com"},
]
readme = "README.md"