[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ParadoxParser"]
include-package-data = true

[tool.setuptools.package-data]
"ParadoxParser" = ["templates/**/*"]

[project]
name = "ParadoxParser"
version = "0.9.0"
dependencies = ["Jinja2==3.1.6", "MarkupSafe==3.0.3"]
requires-python = ">=3.11"
authors = [
  {name = "steven.j2019", email = "steven.j2019@protonmail.com"},
]
readme = "README.md"