[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ParadoxParser"]

[project]
name = "ParadoxParser"
version = "1.0"
requires-python = ">=3.11"
authors = [
  {name = "steven.j2019", email = "steven.j2019@protonmail.com"},
]
readme = "README.md"